# project-scoper

./: CONTRIBUTING.md  LICENSE  README.md  example.env  pyproject.toml
db/: chroma.sqlite3
src/project_scoper/: crew.py  main.py
src/project_scoper/config/: agents.yaml  tasks.yaml
