[tool.poetry]
name = "project-scoper"
version = "0.1.0"
description = ""
authors = ["shadi-fsai <163780314+shadi-fsai@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
crewai = "^0.55.2"
crewai-tools = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
